# lms

./: .clang-tidy  CMakeLists.txt  Dockerfile-build-alpine  Dockerfile-build-arch  Dockerfile-release  INSTALL.md  README.md  SUBSONIC.md
.github/: bug_report.md
.github/workflows/: build-freebsd-basic.yml  build-macos-basic.yml  clang-format-check.yml  codeql.yml
approot/: admin-db.xml  admin-scansettings.xml  artist.xml  main.xml  messages.xml  messages_en-US.xml  messages_es.xml  messages_fr.xml  messages_it.xml  messages_pl.xml  messages_zh.xml  misc.xml  release.xml  settings-audio.xml  settings-password.xml  settings-services.xml  settings-subsonic.xml  settings-ui.xml  tracks.xml
conf/: lms.conf
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/audio/: CMakeLists.txt
src/libs/audio/bench/: CMakeLists.txt  MusicNNModel.cpp
src/libs/audio/impl/: AudioOutput.cpp  MusicNNEmbeddingExtractorCreator.cpp  PcmTypes.cpp
src/libs/audio/impl/alsa/: AudioOutput.cpp  AudioOutput.hpp  AudioOutputStream.cpp  AudioOutputStream.hpp
src/libs/audio/impl/features/: MelFilterBank.cpp  MelFilterBank.hpp
src/libs/audio/impl/ffmpeg/: AudioFile.cpp  AudioFileInfo.cpp  Exception.hpp  FFmpegTypes.cpp  FFmpegTypes.hpp  PcmDecoder.cpp  PcmDecoder.hpp  Utils.cpp  Utils.hpp
src/libs/audio/impl/musicnn/: MusicNNEmbeddingExtractor.cpp  MusicNNEmbeddingExtractor.hpp  MusicNNEmbeddings.cpp  MusicNNModel.cpp  MusicNNModel.hpp
src/libs/audio/impl/pulseaudio/: AudioOutput.cpp  AudioOutput.hpp  AudioOutputStream.cpp  AudioOutputStream.hpp  Exception.cpp  Exception.hpp  MainLoopScopedLock.cpp  MainLoopScopedLock.hpp
src/libs/audio/impl/taglib/: AudioFileInfo.cpp  AudioFileInfo.hpp  Utils.cpp  Utils.hpp
src/libs/audio/impl/utils/: PcmDecodeStreamer.cpp  PcmDecodeStreamer.hpp  PcmSpectralFrameDecoder.hpp
src/libs/audio/include/audio/: IAudioOutput.hpp  IMusicNNEmbeddingExtractor.hpp  IPcmDecoder.hpp  MusicNNEmbeddings.hpp  PcmTypes.hpp
src/libs/audio/include/audio/utils/: IPcmDecodeStreamer.hpp
src/libs/audio/models/: MSD_musicnn_embedding.onnx
src/libs/audio/test/: CMakeLists.txt  MelFilterBank.cpp  MusicNNEmbeddings.cpp  MusicNNModel.cpp  PcmSpectralFrameDecoder.cpp
src/libs/core/: CMakeLists.txt
src/libs/core/bench/: CMakeLists.txt  TraceLoggerBench.cpp
src/libs/core/impl/: IOContextRunner.cpp  Logger.cpp  Md5.cpp  Path.cpp  String.cpp  XxHash3.cpp
src/libs/core/test/: CMakeLists.txt  XxHash3.cpp
src/libs/database/: CMakeLists.txt
src/libs/database/impl/: Migration.cpp  Session.cpp  Utils.hpp
src/libs/database/test/: Artist.cpp  CMakeLists.txt  Cluster.cpp  Common.hpp  DatabaseTest.cpp  Release.cpp
src/libs/image/: CMakeLists.txt
src/libs/math/: CMakeLists.txt
src/libs/math/bench/: CMakeLists.txt  ChamferDistance.cpp  CosineDistance.cpp  DotProduct.cpp  EuclideanDistance.cpp  FFT.cpp  Math.cpp
src/libs/math/test/: CMakeLists.txt  CentroidCalculator.cpp  ChamferDistance.cpp  CosineDistance.cpp  CovarianceCalculator.cpp  DotProduct.cpp  Entropy.cpp  EuclideanDistance.cpp  FFT.cpp  MedoidCalculator.cpp  NormalizedCosineDistance.cpp  PrincipalComponents.cpp  SquareMatrix.cpp  StatsAccumulator.cpp  Vector.cpp  Window.cpp
src/libs/services/: CMakeLists.txt
src/libs/services/jukebox/: CMakeLists.txt
src/libs/services/jukebox/impl/: JukeboxService.cpp  JukeboxService.hpp
src/libs/services/jukebox/include/services/jukebox/: IJukeboxService.hpp
src/libs/services/recommendation/: CMakeLists.txt
src/libs/services/recommendation/impl/: IEngine.hpp  RecommendationService.cpp  RecommendationService.hpp
src/libs/services/recommendation/impl/audio-similarity/: AudioSimilarityEngine.hpp  AudioSimilarityEngine.impl.hpp  AudioVectorProvider.hpp  InterpolationFitConstraint.hpp  MaxDistanceConstraint.hpp  NearDuplicateEmbeddingConstraint.hpp  SmoothTransitionConstraint.hpp  Types.hpp
src/libs/services/recommendation/impl/audio-similarity/musicnn/: MusicNNEmbeddingEngine.cpp  MusicNNEmbeddingEngine.hpp  MusicNNEmbeddingProvider.cpp  MusicNNEmbeddingProvider.hpp
src/libs/services/recommendation/impl/clusters/: ClustersEngine.cpp  ClustersEngine.hpp
src/libs/services/recommendation/impl/track-selection-constraints/: DuplicateTrackConstraint.hpp  ITrackCandidateHardConstraint.hpp  ITrackCandidateSoftConstraint.hpp  SameArtistConstraint.cpp  SameArtistConstraint.hpp  SameReleaseConstraint.cpp  SameReleaseConstraint.hpp  TrackCandidateContext.hpp  TrackCandidateEvaluator.hpp  TrackMetadata.hpp
src/libs/services/recommendation/include/services/recommendation/: IRecommendationService.hpp  Types.hpp
src/libs/services/recommendation/test/: CMakeLists.txt  ConstraintsTest.cpp
src/libs/services/scanner/test/: CMakeLists.txt  IgnoreFilter.cpp  PlayList.cpp  ScannerStats.cpp
src/libs/subsonic/: CMakeLists.txt
src/lms/: CMakeLists.txt  main.cpp
src/lms/ui/: LmsApplication.cpp  LmsApplication.hpp  PlayQueue.cpp  Utils.cpp  Utils.hpp
src/lms/ui/admin/: AdminView.cpp  AdminView.hpp  ScanSettingsView.cpp  ScannerController.cpp  ScannerReportResource.cpp  ScannerReportResource.hpp  UserView.cpp
src/lms/ui/admin/debug/: Database.cpp
src/lms/ui/common/: MandatoryValidator.cpp  PathRouter.cpp  PathRouter.hpp
src/lms/ui/explore/: ArtistTypeSelector.hpp  ArtistView.cpp  ArtistView.hpp  ReleaseView.cpp  ReleaseView.hpp  TrackArtistTypeSelector.cpp  TrackArtistTypeSelector.hpp  TrackListHelpers.cpp
src/lms/ui/settings/: AudioSettingsView.cpp  AudioSettingsView.hpp  PasswordSettingsView.cpp  PasswordSettingsView.hpp  ServicesSettingsView.cpp  ServicesSettingsView.hpp  SettingsView.cpp  SettingsView.hpp  SettingsViewUtils.cpp  SettingsViewUtils.hpp  SubsonicSettingsView.cpp  SubsonicSettingsView.hpp  UISettingsView.cpp  UISettingsView.hpp
src/tools/: CMakeLists.txt
src/tools/audioplay/: CMakeLists.txt  LmsAudioPlay.cpp
src/tools/db-generator/: CMakeLists.txt  LmsDbGenerator.cpp
src/tools/musicnn/: CMakeLists.txt  LmsMusicNN.cpp
src/tools/musicnn-export/: export_onnx.py
src/tools/recommendation/: CMakeLists.txt  LmsRecommendation.cpp
(+117 files in other folders)
