include(GoogleTest)

add_executable(test-scanner
	ArtistInfo.cpp
	AudioFileUtils.cpp
	IgnoreFilter.cpp
	Lyrics.cpp
	PlayList.cpp
	ScannerStats.cpp
	TrackMetadataParser.cpp
	)

target_include_directories(test-scanner PRIVATE
	../impl
	)

target_link_libraries(test-scanner PRIVATE
	lmsscanner
	lmsaudio
	GTest::GTest
	GTest::gtest_main
	)

if (NOT CMAKE_CROSSCOMPILING)
	gtest_discover_tests(test-scanner)
endif()

